[gd_scene load_steps=10 format=3 uid="uid://07m0iibryhtg"]

[ext_resource type="Texture2D" uid="uid://c7ur8skn4f8du" path="res://assets/art/props/soccer-ball.png" id="1_oqv3d"]
[ext_resource type="Script" uid="uid://ch73uksc85uh2" path="res://scenes/ball/ball_states/ball.gd" id="1_stoaj"]
[ext_resource type="Texture2D" uid="uid://drg7rclbnujif" path="res://assets/art/props/ball-shadow.png" id="2_nv6q1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oqv3d"]
radius = 5.0

[sub_resource type="Animation" id="Animation_nv6q1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_oqv3d"]
resource_name = "idle"
length = 0.14
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_stoaj"]
resource_name = "roll"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xotqv"]
_data = {
&"RESET": SubResource("Animation_nv6q1"),
&"idle": SubResource("Animation_oqv3d"),
&"roll": SubResource("Animation_stoaj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_nv6q1"]
radius = 4.0

[node name="Ball" type="AnimatableBody2D"]
collision_layer = 4
collision_mask = 33
sync_to_physics = false
script = ExtResource("1_stoaj")
friction_air = 35.0
friction_ground = 250.0

[node name="BallSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_oqv3d")
centered = false
offset = Vector2(-5, -10)
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_oqv3d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_xotqv")
}
autoplay = "idle"

[node name="ShadowSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_nv6q1")
centered = false
offset = Vector2(-8, -16)

[node name="PlayerDectectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -5)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDectectionArea"]
shape = SubResource("CircleShape2D_nv6q1")

[node name="ScoringRaycast" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -5)
target_position = Vector2(80, 0)
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false
